# tapo-rest

./: Cargo.toml
src/: cmd.rs  config.rs  devices.rs  discovery.rs  main.rs  telemetry.rs
src/server/: loader.rs  mod.rs  state.rs
